@@ -149,3 +149,7 @@ issue 153: rotation of block models was crashing; fixed on: 19.03.2020 by uuk
 issue 155: multipart-models were crashing on load when using multiple model links in one entry;
     fixed on: 20.03.2020 by uuk
 issue 156: exceptions when in gamemode 0 due to wrong xp draw call
+issue 151: saves include full-coordinates, not chunk relative ones leading into memory problems; fixed on: 31.03.2020 by
+    uuk
+issue 158: when trying to load an world which does not exists, the game gives two exceptions to the log; fixed on:
+    31.03.2020 by uuk
